<resources>
    <string name="app_name">SensorsLoggin</string>

    <string name="hello_world">Hello world!</string>
    <string name="intro">Here you can see the values for the accelerometer</string>
    <string name="action_settings">Settings</string>
    <string name="equis">Value for x: </string>
    <string name="ye">Value for y: </string>
    <string name="zeta">Value for z: </string>
    <string name="title_activity_sensors_working">SensorsWorking</string>
    <string name="start_new_act">Start!</string>
    <string name="max_value_light">Maximum value for light: </string>
    <string name="current_value_light">Current value for light: </string>
    <string name="gx">Gyrsocope X: </string>
    <string name="usr">Username: </string>
    <string name="orient">Phone orientation: </string>
    <string name="prss">Plase press on letter: </string>
    <string name="lett">A</string>
    <string name="input">Input:</string>
    <string name="posture">Posture:</string>
</resources>
