<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valeria.sensorsloggin.SensorsWorking">

    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intro"
        android:id="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/equis"
        android:id="@+id/xValue"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/valorx"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/xValue"
        android:layout_below="@+id/textView"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ye"
        android:id="@+id/yValue"
        android:layout_below="@+id/xValue"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/valory"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/xValue"
        android:layout_below="@+id/xValue"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zeta"
        android:id="@+id/zValue"
        android:layout_below="@+id/yValue"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/valorz"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/zValue"
        android:layout_below="@+id/yValue"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/max_value_light"
        android:id="@+id/maxlightvalue"
        android:layout_below="@+id/zValue"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/maxlightvalue2"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/maxlightvalue"
        android:layout_below="@+id/valorz"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_value_light"
        android:id="@+id/currentlightvalue"
        android:layout_below="@+id/valorz"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/currentlightvalue2"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/currentlightvalue"
        android:layout_below="@+id/maxlightvalue2"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gx"
        android:id="@+id/gyrosc"
        android:layout_below="@+id/currentlightvalue"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gyrox"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/gyrosc"
        android:layout_below="@+id/currentlightvalue2"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/plspress"
        android:text="@string/prss"

        android:layout_below="@+id/gyrosc"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLetter"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/plspress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textview_ChanginLetter"
        android:layout_alignTop="@+id/plspress"
        android:layout_toEndOf="@+id/plspress" />


    <RelativeLayout android:id="@+id/RelativeLayout01"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom = "true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/keyb2"
            android:id="@+id/imageView"
            android:gravity = "bottom"
            android:adjustViewBounds="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>



</RelativeLayout>
